# advent-of-code-2020-py

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.cfg  utils.py
binary_boarding/: __main__.py
binary_boarding/data/: input.txt
custom_customs/: __main__.py
custom_customs/data/: input.txt
fp/: __init__.py  fp.py
passport_processing/: __main__.py  passport.py
passport_processing/data/: input.txt
password_philosophy/: __init__.py  __main__.py  password_philosophy.py
password_philosophy/data/: input.txt
reportrepair/: __init__.py  __main__.py  reportrepair.py
reportrepair/data/: input.txt
tests/: test_binary_boarding.py  test_custom_customs.py  test_passport_processing.py  test_password_phylosophy.py  test_reportrepair.py  test_toboggan_trajectory.py
toboggan_trajectory/: __init__.py  __main__.py  toboggan_trajectory.py
toboggan_trajectory/data/: input.txt
