[tool.poetry]
name = "advent-of-code-2020-py"
version = "0.1.0"
description = ""
authors = ["Fernando Martínez González <frndmartinezglez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest-xdist = "^2.2.0"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
